[package]
name = "tui-template"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version = "0.10.0", features=["crossterm"]}
crossterm = "0.17.7"
anyhow = "1.0.32"
rand = "0.7.3"
