[package]
name = "tui-template"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15.0", features = ["crossterm"] }
crossterm = "0.19.0"
anyhow = "1.0.40"
thiserror = "1.0.24"
